refactor: create and plsit DOMcontroller and gamecontroller modules

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,24 @@ navy = #0A2342
 ice_gray = #EFE9E7
 */
 
+:root {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    /* --ship-bg-colour: #43464B; */
+    /* box-sizing: border-box; */
+}
+
 body {
     margin: 0;
     padding: 0;
     background-color: #0A2342;
-    font-size: 2rem;
+
+}
+
+.game-container {
+    display: flex;
+    flex-direction: column;
+    /* background-color: #262626; */
+    z-index: 1;
 }
 
