--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 :root {
+    margin: 0;
+    padding: 0;
     font-size: 1.5rem;
     font-family: 'Courier New', Courier, monospace;
     --ship-colour: #d2d2d2;
@@ -10,20 +12,24 @@
 body {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     color: #EFE9E7;
     margin: 0;
     padding: 0;
+    height: 100vh;
     background-color: var(--background-colour);
+    position: relative;
 }
 
 h1 {
     border: 5px solid #EFE9E7;
-    font-size: 4rem;
+    font-size: 3rem;
     padding: 20px;
     background: -webkit-linear-gradient(#247ea4, #ffffff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin: 30px;
 }
 
 .game-cont {
@@ -93,7 +99,7 @@ h1 {
     justify-content: center;
     background-color: var(--menu-colour);
     box-shadow: 10px 10px 0px 0px rgb(0, 0, 0);
-    padding: 30px 20%;
+    padding: 20px 20%;
     margin: 20px 0;
 }
 
@@ -138,4 +144,14 @@ dialog {
 
 #win-message::backdrop {
     background-color: #07182e9a;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: #28455f;
+    color: #e5e7eb;
+    padding: 10px 0;
+    bottom: 0;
+    width: 100%;
 }
